--- a/new_site.html
+++ b/new_site.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-   <meta charset="utf-8">
-   <title>(placeholder)</title>
+    <meta charset="utf-8">
+
+    <title>(placeholder)</title>
+    <link rel="stylesheet" href="style_sheet.css" type="text/css">
+    <script src="scratchpad.js" type="text/javascript">
+</script>
 </head>
+
 <body>
-   <script src="scratchpad.js" type="text/javascript"></script>
+    <div class="red shadowed stuff-box">
+		<form>
+			<input type="range" min="0" max="11" value="0"
+						onchange="fibSlider(this)">
+			<button type="button" onclick="fibButton(this)">Fib(0)</button>
+		</form>
+	</div>
 </body>
 </html>
