--- a/new_site.html
+++ b/new_site.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>(placeholder)</title>
+    <title>Cool Sequences</title></title>
     <link rel="stylesheet" href="style_sheet.css" type="text/css">
     <script src="scratchpad.js" type="text/javascript">
 </script>
@@ -16,6 +16,20 @@
 			<input type="range" min="0" max="11" value="0"
 						onchange="fibSlider(this)">
 			<button type="button" onclick="fibButton(this)">Fib(0)</button>
+		</form>
+	</div>
+	<div class="blue shadowed stuff-box">
+	   <form>
+			<input type="range" min="0" max="11" value="0"
+						onchange="pellSlider(this)">
+			<button type="button" onclick="pellButton(this)">Pell(0)</button>
+		</form>
+	</div>
+	<div class="green shadowed stuff-box">
+	   <form>
+			<input type="range" min="0" max="11" value="0"
+						onchange="tribSlider(this)">
+			<button type="button" onclick="tribButton(this)">Trib(0)</button>
 		</form>
 	</div>
 </body>
