--- a/new_site.html
+++ b/new_site.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Cool Sequences</title></title>
+    <title>Sequences</title></title>
     <link rel="stylesheet" href="style_sheet.css" type="text/css">
     <script src="scratchpad.js" type="text/javascript">
 </script>
 </head>
 
 <body>
+	<h1>Fibonacci, Pell, and Tribonacci Sequences</h1>
+	<p>Change the sliders to find the value of each sequence for the selected argument.</p>
     <div class="red shadowed stuff-box">
 		<form>
 			<input type="range" min="0" max="11" value="0"
